deleted unnecesarry pngs added html loader to laod images inside img tag and rebuilt

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,23 @@
 <header>
 </header>
 <main>
-  <div>
-    <h2>main contents</h2>
+  <div id="img-slider-cont">
+    <div id="slide-0">
+      <img src="./resources/img/pexels-lisa-fotios-13972514.jpg" alt="first-slide">
+    </div>
+    <div id="slide-1">
+      <img src="./resources/img/pexels-lokman-sevim-9704111.jpg" alt="slide">
+    </div>
+    <div id="slide-2">
+      <img src="./resources/img/pexels-tahir-osman-13859770.jpg" alt="slide">
+    </div>
+    <div id="slide-3">
+      <img src="./resources/img/pexels-esranur-kalay-9830153.jpg" alt="slide">
+    </div>
+    <div id="slide-4">
+      <img src="./resources/img/pexels-алесь-усцінаў-9932622.jpg" alt="last-slide">
+    </div>
+
   </div>
   <nav>
   </nav>
