--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,25 @@
 </header>
 <main>
   <div id="img-slider-cont">
-    <div id="slide-0">
-      <img src="./resources/img/pexels-lisa-fotios-13972514.jpg" alt="first-slide">
-    </div>
-    <div id="slide-1">
-      <img src="./resources/img/pexels-lokman-sevim-9704111.jpg" alt="slide">
-    </div>
-    <div id="slide-2">
-      <img src="./resources/img/pexels-tahir-osman-13859770.jpg" alt="slide">
-    </div>
-    <div id="slide-3">
-      <img src="./resources/img/pexels-esranur-kalay-9830153.jpg" alt="slide">
-    </div>
-    <div id="slide-4">
-      <img src="./resources/img/pexels-алесь-усцінаў-9932622.jpg" alt="last-slide">
-    </div>
+    <div id="slide-outer-cont">
+      <div id="previous-arrow">
+      </div>
+      <div id="off-inner-slide-cont">
+        <div id="slide-inner-cont">
+          <img id="image" src="./resources/img/pexels-lisa-fotios-13972514.jpg" alt="first-slide">
+        </div>
+      </div>
 
+      <div id="next-arrow">
+      </div>
+    </div>
+    <ul id="indicator">
+      <li>o</li>
+      <li>o</li>
+      <li>o</li>
+      <li>o</li>
+      <li>o</li>
+    </ul>
   </div>
   <nav>
   </nav>
