changed placeholders to actual dots

--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,18 @@
     <div id="slide-outer-cont">
       <div id="previous-arrow">
       </div>
-      <div id="off-inner-slide-cont">
-        <div id="slide-inner-cont">
-          <img id="image" src="./resources/img/pexels-lisa-fotios-13972514.jpg" alt="first-slide">
-        </div>
+      <div id="slide-inner-cont">
+        <img id="image" src="./resources/img/pexels-lisa-fotios-13972514.jpg" alt="first-slide">
       </div>
-
       <div id="next-arrow">
       </div>
     </div>
     <ul id="indicator">
-      <li>o</li>
-      <li>o</li>
-      <li>o</li>
-      <li>o</li>
-      <li>o</li>
+      <li class="active-dot"></li>
+      <li class="dot"></li>
+      <li class="dot"></li>
+      <li class="dot"></li>
+      <li class="dot"></li>
     </ul>
   </div>
   <nav>
