fixed bug where the first element was checking for previous element since it doesnt exist

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <ul id="indicator">
-      <li class="dot"></li>
+      <li class="active-dot"></li>
       <li class="dot"></li>
       <li class="dot"></li>
       <li class="dot"></li>
